<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.counter.CounterActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:fontFamily="@font/hind_siliguri_light"
        android:gravity="center"
        android:text="@string/counter_header_label"
        android:textColor="#01080F"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/deathCard"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <TextView
            android:id="@+id/deathLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_medium"
            android:layout_marginTop="@dimen/space_small"
            android:fontFamily="@font/aldrich"
            android:text="@string/counter_death_count_label"
            android:textColor="#01080F"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/deathCounter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/aldrich"
            android:gravity="center"
            android:textColor="#E91E63"
            android:textSize="44sp"
            tools:text="134" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/confirmedCard"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <TextView
            android:id="@+id/confirmedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_medium"
            android:layout_marginTop="@dimen/space_small"
            android:fontFamily="@font/gudea"
            android:text="@string/counter_confirmed_label"
            android:textColor="#01080F"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/confirmedCounter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/aldrich"
            android:gravity="center"
            android:textColor="#E91E63"
            android:textSize="44sp"
            tools:text="14" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/recoveredCard"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deathCard">

        <TextView
            android:id="@+id/recoveredLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_medium"
            android:layout_marginTop="@dimen/space_small"
            android:fontFamily="@font/gudea"
            android:text="@string/counter_recovered_label"
            android:textColor="#01080F"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/recoveredCounter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/aldrich"
            android:gravity="center"
            android:textColor="#E91E63"
            android:textSize="44sp"
            tools:text="134" />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/reloadDataCard"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmedCard">

        <TextView
            android:id="@+id/reloadDataLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_medium"
            android:layout_marginTop="@dimen/space_small"
            android:fontFamily="@font/gudea"
            android:gravity="center"
            android:text="@string/counter_refresh_label"
            android:textColor="#01080F"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/reloadIcon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_corona_virus"
            android:gravity="center"
            android:textColor="#E91E63"
            android:textSize="44sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/dataSourcesLabel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#12181D"
        android:fontFamily="@font/hind_siliguri_light"
        android:gravity="center_vertical"
        android:paddingStart="15dp"
        android:text="@string/counter_data_sources_label"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlSymmetry" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/dataSourcesLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>